Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/Team_Dependency__c.object-meta.xml
<CustomObject>
    <label>User Story Dependency</label>
    <nameField>
        <displayFormat>UD-{0000000}</displayFormat>
        <label>User Story Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>