Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/fields/Child_User_Story_Status__c.field-meta.xml
<CustomField>
    <fullName>Child_User_Story_Status__c</fullName>
    <description>The Status of the child user story</description>
    <formula>Text( Dependent_User_Story__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Status of the child user story</inlineHelpText>
    <label>Child User Story Status</label>
    <type>Text</type>
</CustomField>