Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <inlineHelpText>Short description (255 chars max) of the User Story that is needed from the other team. More detailed description can be added to the Notes field.</inlineHelpText>
    <label>Deliverable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>