Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/fields/Dependency_Status__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Status__c</fullName>
    <label>Dependency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>More Info Needed</fullName>
            </value>
            <value>
                <fullName>Prioritized</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>