Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/fields/Needed_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Needed_by_Date__c</fullName>
    <label>Needed by (Date)</label>
    <type>Date</type>
</CustomField>