Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/fields/Parent_User_Story_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_User_Story_Status__c</fullName>
    <description>The Status of the parent user story</description>
    <formula>Text( Provider_User_Story__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Status of the parent user story</inlineHelpText>
    <label>Parent User Story Status</label>
    <type>Text</type>
</CustomField>