Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/fields/Provider_Team__c.field-meta.xml
<CustomField>
    <fullName>Provider_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team that will provide the deliverable to fulfill this dependency.</description>
    <inlineHelpText>The team that will provide the deliverable to fulfill this dependency.</inlineHelpText>
    <label>Provider Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>User Story Dependencies (Provider Team)</relationshipLabel>
    <relationshipName>Team_Dependencies_On_Team</relationshipName>
    <type>Lookup</type>
</CustomField>