Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/fields/Provider_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Provider_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The record representing the User Story to satisfy the deliverable of this dependency.</description>
    <inlineHelpText>The record representing the User Story to satisfy the deliverable of this dependency.</inlineHelpText>
    <label>Parent User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Child User Stories</relationshipLabel>
    <relationshipName>Team_Dependencies_On_UStory</relationshipName>
    <type>Lookup</type>
</CustomField>