Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/fields/Skip_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Skip_Dependency__c</fullName>
    <formula>OR( ISPICKVAL( Dependency_Status__c ,&apos;Completed&apos;), ISPICKVAL( Dependency_Status__c ,&apos;Deferred&apos;), ISPICKVAL( Dependency_Status__c ,&apos;Never&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skip Dependency</label>
    <type>Checkbox</type>
</CustomField>