Dummy_Package_for_scratch_org/main/default/objects/Team_Dependency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deliverable__c</columns>
    <columns>Dependency_Status__c</columns>
    <columns>Needed_by_Date__c</columns>
    <columns>Dependent_Team__c</columns>
    <columns>Provider_Team__c</columns>
    <columns>Dependent_User_Story__c</columns>
    <columns>Provider_User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>